created login forms

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,32 +5,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login App</title>
-
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
+  <title>LoginApp</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  {{{body}}}
   <div class="container">
-    <div class="row">
-      <div class="col-md-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus fugiat praesentium magni mollitia itaque aut dolore
-        minus vitae, numquam, fuga consectetur assumenda ex porro aspernatur eius blanditiis neque et sit. Dicta, rem recusandae!
-        Error, laboriosam esse? Mollitia enim dicta veritatis delectus, quis minus ex expedita odit consectetur praesentium
-        laborum iste unde consequatur, repellat excepturi modi. Numquam nobis aliquam odit in cupiditate quod culpa reprehenderit
-        animi natus soluta vero mollitia eum error pariatur libero, accusamus qui id deleniti iure doloribus deserunt temporibus
-        dicta. Magni cum aperiam harum, magnam repellendus sint! Dolor animi quisquam reprehenderit corporis, molestias illum
-        quasi commodi dolorem a hic. Harum illo fuga qui neque recusandae! Magnam officiis ad, quis voluptas exercitationem
-        autem? Dicta ducimus nam corporis reiciendis, mollitia assumenda nostrum blanditiis molestiae, perferendis saepe
-        numquam consectetur ad, eius maxime hic aut rerum inventore ab voluptates sint! Sequi nihil nulla suscipit cupiditate,
-        omnis culpa recusandae distinctio, aut et tempora a rem consequatur voluptatibus saepe odit facilis. Nesciunt dignissimos
-        eaque, ratione quaerat praesentium quas ad omnis rerum sed. Distinctio obcaecati adipisci iure eius cumque incidunt
-        perferendis, quae eveniet deserunt qui! Excepturi provident molestias saepe sed maiores quasi, deleniti, labore,
-        voluptatibus doloribus eaque obcaecati dolorum! Sapiente fugiat temporibus expedita repudiandae labore.</div>
+    <div class="header clearfix">
+      <nav>
+        <ul class="nav nav-pills float-right">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Dasboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/register">Register</a>
+          </li>
+          <li class="nav-item">
+           <a class="nav-link" href="/users/logout">Logout</a>
+          </li>
+        </ul>
+      </nav>
+      <h3 class="text-muted">LoginApp</h3>
     </div>
+
+    <div class="row body">
+      <div class="col-lg-12">
+        {{{body}}}
+      </div>
+    </div>
+
+    <footer class="footer">
+      <p>&copy; LoginApp 2017</p>
+    </footer>
+
   </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
