--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,14 @@
-Login
+<div class="page-header">
+  <h2>Account Login</h2>
+  <form action="/users/login" method="post">
+    <div class="form-group">
+      <label for="">Username</label>
+      <input type="text" class="form-control" placeholder="Username">
+    </div>
+    <div class="form-group">
+      <label for="">Password</label>
+      <input type="password" placeholder="Password" class="form-control">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
