--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -14,23 +14,28 @@
   <body>
     <div class="container">
       <div class="header clearfix">
+        <h3 class="text-muted">LoginApp</h3>
         <nav>
           <ul class="nav nav-pills float-right">
             <li class="nav-item">
-            <a class="nav-link" href="/">Dasboard</a>
-          </li>
+             <a class="nav-link" href="/">Dashboard</a>
+            </li>
+          {{#if user}}
             <li class="nav-item">
-            <a class="nav-link" href="/users/login">Login</a>
-          </li>
+             <a class="nav-link" href="/users/logout">Logout</a>
+            </li>
+          {{else}}
             <li class="nav-item">
-            <a class="nav-link" href="/users/register">Register</a>
-          </li>
+             <a class="nav-link" href="/users/login">Login</a>
+            </li>
             <li class="nav-item">
-           <a class="nav-link" href="/users/logout">Logout</a>
-          </li>
+              <a class="nav-link" href="/users/register">Register</a>
+            </li>
+          {{/if}}
+
           </ul>
         </nav>
-        <h3 class="text-muted">LoginApp</h3>
+
       </div>
 
       <div class="row body">
